update chapter outlines

--- a/references.bib
+++ b/references.bib
@@ -17,3 +17,83 @@
 }
 
 
+
+@article{gao2021,
+	title = {The initial inoculation ratio regulates bacterial coculture interactions and metabolic capacity},
+	author = {Gao, Chun-Hui and Cao, Hui and Cai, Peng and {Sørensen}, {Søren J.}},
+	year = {2021},
+	month = {01},
+	date = {2021-01},
+	journal = {ISME Journal},
+	pages = {29--40},
+	volume = {15},
+	number = {1},
+	doi = {10.1038/s41396-020-00751-7},
+	url = {https://www.nature.com/articles/s41396-020-00751-7},
+	note = {tex.ids= gaoInitialInoculationRatio2020, gaoInitialInoculationRatio2020a
+number: 1
+publisher: Nature Publishing Group
+TLDR: It is shown that the initial ratio can induce emergent properties in coculture and not only impacts the reproducibility of coculture experiments but also can influence the understanding of generic microbial ecology.},
+	langid = {en}
+}
+
+@article{gao2021a,
+	title = {Emergent transcriptional adaption facilitates convergent succession within a synthetic community},
+	author = {Gao, Chun-Hui and Cao, Hui and Ju, Feng and Xiao, Ke-Qing and Cai, Peng and Wu, Yichao and Huang, Qiaoyun},
+	year = {2021},
+	month = {09},
+	date = {2021-09-01},
+	journal = {ISME Communications},
+	pages = {46},
+	volume = {1},
+	number = {1},
+	doi = {10.1038/s43705-021-00049-5},
+	url = {https://www.nature.com/articles/s43705-021-00049-5},
+	note = {tex.ids= gaoEmergentTranscriptionalAdaption2021a
+Bandiera{\_}abtest: a
+Cc{\_}license{\_}type: cc{\_}by
+Cg{\_}type: Nature Research Journals
+Primary{\_}atype: Research
+Subject{\_}term: Microbial ecology
+Subject{\_}term{\_}id: microbial-ecology
+number: 1
+publisher: Nature Publishing Group
+TLDR: It is proposed that microorganism responses and the induced gene expression changes play important roles in the process of community succession as well as the effect of species interaction on gene expression was inevitable.},
+	langid = {en}
+}
+
+@article{chang2023,
+	title = {Emergent coexistence in multispecies microbial communities},
+	author = {Chang, Chang-Yu and {Baji{\'{c}}}, Djordje and Vila, Jean C. C. and Estrela, Sylvie and Sanchez, Alvaro},
+	year = {2023},
+	month = {07},
+	date = {2023-07-21},
+	journal = {Science},
+	pages = {343--348},
+	volume = {381},
+	number = {6655},
+	doi = {10.1126/science.adg0727},
+	url = {https://www.science.org/doi/10.1126/science.adg0727},
+	note = {Publisher: American Association for the Advancement of Science
+titleTranslation: 多物种微生物群落中的涌现共存
+abstractTranslation: 理解维持微生物多样性的机制是生态学中的一个关键目标。过去的微生物共存研究主要集中在物种对上，但目前尚不清楚在孤立状态下的成对共存是否是多物种群落中共存所必需的。为了回答这个问题，我们在体外对12个不同富集群落中稳定共存的成员进行了数百次成对竞争实验。为了确定这些实验的结果，我们开发了一条自动化图像分析流程来量化物种丰度。我们发现，竞争排斥是最常见的结果，并且它具有强烈的层次性和传递性。由于许多在稳定多物种群落中共存的物种在相同条件下的成对共培养中未能共存，我们得出结论，多物种共存是一种涌现现象。这项工作强调了群落背景在理解复杂生态系统中共存起源的重要性。
+TLDR: This work experimentally reconstituted all possible pairwise co-cultures between stably coexisting species from 13 different, low-diversity microbial enrichment communities and finds that, when isolated from the rest of their community members, most species pairs fail to coexist.},
+	langid = {en}
+}
+
+@article{goldford2018,
+	title = {Emergent simplicity in microbial community assembly},
+	author = {Goldford, Joshua E. and Lu, Nanxi and {Baji{\'{c}}}, Djordje and Estrela, Sylvie and Tikhonov, Mikhail and Sanchez-Gorostiaga, Alicia and {Segrè}, Daniel and Mehta, Pankaj and Sanchez, Alvaro},
+	year = {2018},
+	month = {08},
+	date = {2018-08-03},
+	journal = {Science},
+	pages = {469--474},
+	volume = {361},
+	number = {6401},
+	doi = {10.1126/science.aat1168},
+	url = {http://science.sciencemag.org/content/361/6401/469},
+	note = {PMID: 30072533
+TLDR: Monitoring the assembly of hundreds of soil- and plant-derived microbiomes in well-controlled minimal synthetic media shows that the community-level function and the coarse-grained taxonomy of the resulting communities are highly predictable and governed by nutrient availability, despite substantial species variability.},
+	langid = {en}
+}
