--- a/references.bib
+++ b/references.bib
@@ -97,3 +97,38 @@ TLDR: This work experimentally reconstituted all possible pairwise co-cultures b
 TLDR: Monitoring the assembly of hundreds of soil- and plant-derived microbiomes in well-controlled minimal synthetic media shows that the community-level function and the coarse-grained taxonomy of the resulting communities are highly predictable and governed by nutrient availability, despite substantial species variability.},
 	langid = {en}
 }
+
+@article{gao2021b,
+	title = {The initial inoculation ratio regulates bacterial coculture interactions and metabolic capacity},
+	author = {Gao, Chun-Hui and Cao, Hui and Cai, Peng and {Sørensen}, {Søren J.}},
+	year = {2021},
+	month = {01},
+	date = {2021-01},
+	journal = {ISME Journal},
+	pages = {29--40},
+	volume = {15},
+	number = {1},
+	doi = {10.1038/s41396-020-00751-7},
+	url = {https://www.nature.com/articles/s41396-020-00751-7},
+	note = {tex.ids= gaoInitialInoculationRatio2020, gaoInitialInoculationRatio2020a
+number: 1
+publisher: Nature Publishing Group
+TLDR: It is shown that the initial ratio can induce emergent properties in coculture and not only impacts the reproducibility of coculture experiments but also can influence the understanding of generic microbial ecology.},
+	langid = {en}
+}
+
+@article{ho2019,
+	title = {Rapid identification of pathogenic bacteria using Raman spectroscopy and deep learning},
+	author = {Ho, Chi-Sing and Jean, Neal and Hogan, Catherine A. and Blackmon, Lena and Jeffrey, Stefanie S. and Holodniy, Mark and Banaei, Niaz and Saleh, Amr A. E. and Ermon, Stefano and Dionne, Jennifer},
+	year = {2019},
+	month = {10},
+	date = {2019-10-30},
+	journal = {Nature Communications},
+	pages = {4927},
+	volume = {10},
+	number = {1},
+	doi = {10.1038/s41467-019-12898-9},
+	url = {https://www.nature.com/articles/s41467-019-12898-9},
+	note = {Publisher: Nature Publishing Group},
+	langid = {en}
+}
