--- a/lecture1-intro.qmd
+++ b/lecture1-intro.qmd
@@ -1,23 +1,28 @@
 ---
-title: "数据驱动<br />的<br />可重复性研究"
+title: "课程简介"
 author: "高春辉"
-subtitle: "课程简介"
 format:
   revealjs: 
     slide-number: true
     chalkboard: 
       buttons: false
     preview-links: auto
-    css: styles.css
+    css: slide.css
     footer: '[课程仓库](https://github.com/D2RS-2025spring)'
+  pptx:
+    reference-doc: template.pptx
 bibliography: 
     - references.bib
     - packages.bib
 ---
 
-# 概述 {background="#43464B"}
+# 概述
 
 《数据驱动的可重复性研究》课程旨在教授学生如何在科学研究中实现数据驱动的可重复性，确保研究结果的可验证性和可靠性。
+
+::: {.notes}
+Speaker notes go here.
+:::
 
 ## 课程目标
 
@@ -75,7 +80,7 @@ bibliography:
 -   人工智能模块：借助人工智能工具进行数据分析
 -   开发协作模块：与全世界开发者协作，开发自己的软件包
 
-# 课程项目一览 {background="#43464B"}
+# 课程项目一览
 
 ## 环境搭建模块
 
@@ -83,34 +88,34 @@ bibliography:
 
 1.  电脑硬件和操作系统
 2.  可重复的数据分析环境
+3. 现代工具与展望
 
 ## 数据分析模块
 
 数据分析模块的项目内容包括：
 
-3.  分组数据统计分析和可视化
-4.  转录组学数据分析和可视化
-5.  微生物组数据分析及可视化
+4.  分组数据统计分析和可视化
+5.  转录组学数据分析和可视化
+6.  微生物组数据分析及可视化
 
 ## 人工智能模块
 
 人工智能模块的项目内容包括：
 
-6.  机器学习算法及实现
-7.  手搓神经网络模型
-8.  利用拉曼光谱识别病原菌
-9.  调用通用大语言模型执行任务
-10. 计算机视觉辅助分析实验图片
+7.  机器学习算法及实现
+8.  手搓神经网络模型
+9.  利用拉曼光谱识别病原菌
+10.  调用通用大语言模型执行任务
+11. 计算机视觉辅助分析实验图片
 
 ## 开发协作模块
 
 开发协作模块的项目内容包括：
 
-11. 与全世界开发者协作
-12. 开发 R 包
-13. 现代工具与展望
+12. 与全世界开发者协作
+13. 开发 R 包
 
-# 课程大纲 {background="#43464B"}
+# 课程大纲
 
 ## 环境搭建模块
 
@@ -122,10 +127,16 @@ bibliography:
     3.  安装 `Conda` & `Python`
     4.  安装 `Git`，注册 `GitHub`/`Gitee` 账号
     5.  安装 VSCode、JupyterLab、Quarto 等工具
+3. **现代工具与展望**
+    1.  Markdown 和 Latex
+    2.  R Markdown 和 JupyterLab
+    3.  Quarto 文档
+    4.  AI 代码编辑器
+
 
 ## 数据分析模块
 
-3.  **分组数据统计分析和可视化**
+4.  **分组数据统计分析和可视化**
 
     以 2021 年发表在 ISME J 的论文为例，讲解统计分析和可视化的方法 [@gao2021b]。
 
@@ -137,7 +148,7 @@ bibliography:
 
 ## 数据分析模块
 
-4.  **转录组学数据分析和可视化**
+5.  **转录组学数据分析和可视化**
 
     以 2021 年发表在 ISME Communications 的论文为例，讲解转录组学数据分析和可视化的方法 [@gao2021a]。
 
@@ -148,7 +159,7 @@ bibliography:
 
 ## 数据分析模块
 
-5.  **微生物组数据分析及可视化**
+6.  **微生物组数据分析及可视化**
 
     以胡脊梁的研究数据为例，讲解微生物组数据分析和可视化的方法。
 
@@ -156,7 +167,7 @@ bibliography:
 
 ## 人工智能模块
 
-6.  **机器学习算法及实现**
+7.  **机器学习算法及实现**
 
     以熔解曲线数据建模为例，讲解机器学习算法及实现的方法。
 
@@ -166,7 +177,7 @@ bibliography:
 
 ## 人工智能模块
 
-7.  **手搓神经网络模型**
+8.  **手搓神经网络模型**
 
     以手写字母识别为例，从零搭建一个VGG16神经网络模型。
 
@@ -175,7 +186,7 @@ bibliography:
 
 ## 人工智能模块
 
-8.  **利用拉曼光谱识别病原菌**
+9.  **利用拉曼光谱识别病原菌**
 
     以发表在 Nature Communications 上的一篇论文为例，讲解拉曼光谱+残差网络的应用[@ho2019]。
 
@@ -184,14 +195,14 @@ bibliography:
 
 ## 人工智能模块
 
-9.  **调用通用大语言模型执行任务**
+10.  **调用通用大语言模型执行任务**
     1.  HuggingFace 和 Modelscope
     2.  ChatGPT 和 ChatGLM
     3.  模型性能评估（评测数据集、标准及测评工具Inspect）
 
 ## 人工智能模块
 
-10. **计算机视觉分析实验图片**
+11. **计算机视觉分析实验图片**
 
     以植物图片分割为例，讲解如何
 
@@ -200,7 +211,7 @@ bibliography:
 
 ## 开发协作模块
 
-11. **与全世界开发者协作**
+12. **与全世界开发者协作**
 
     讲解如何使用 GitHub 自动化，交流和创建网站。
 
@@ -210,20 +221,14 @@ bibliography:
 
 ## 开发协作模块
 
-12. **开发 R 包**
+13. **开发 R 包**
 
     以 ggVennDiagram 软件包开发为例，讲解如何开发软件包，让别人可以用来“复现”你的工作[@R-ggVennDiagram]。
 
     1.  devtools
     2.  CRAN/Bioconductor
 
-## 开发协作模块
 
-13. **现代工具与展望**
-    1.  Markdown 和 Latex
-    2.  R Markdown 和 JupyterLab
-    3.  Quarto 文档
-    4.  AI 代码编辑器
 
 ## References
 
